增加教程顺序实现

--- a/index.html
+++ b/index.html
@@ -26,4 +26,37 @@
 		<script type="module" src="./src/main.ts"></script>
 		<!-- <script type="module" src="./dist/main.js"></script> -->
 	</body>
+
+	<script>
+		var RenderCanvas = document.getElementById("RenderCanvas");
+
+		function printCanvasResolution(canvas) {
+			if (canvas instanceof HTMLCanvasElement) {
+				console.log(`Canvas 分辨率: ${canvas.width} x ${canvas.height}`);
+			} else {
+				console.log('传入的不是一个有效的 canvas 元素');
+			}
+		}
+		function resizeCanvasToDisplaySize(canvas) {
+			// 获取浏览器中canvas的显示大小
+			var width = canvas.clientWidth;
+			var height = canvas.clientHeight;
+
+			// 检查canvas的大小是否与其显示大小匹配
+			if (canvas.width !== width || canvas.height !== height) {
+				// 如果不匹配，将canvas的大小设置为其显示大小
+				canvas.width = width;
+				canvas.height = height;
+			}
+			printCanvasResolution(canvas);
+		}
+
+		// 当窗口大小改变时，调整canvas的大小
+		window.addEventListener('resize', function() {
+			resizeCanvasToDisplaySize(RenderCanvas);
+		});
+
+		// 初始时，也需要调整canvas的大小
+		resizeCanvasToDisplaySize(RenderCanvas);
+	</script>
 </html>
