--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 	</head>
 	<body>
 		<canvas height="100%" width="100%" id="RenderCanvas">
+			123
 		</canvas>
 		<script type="module" src="./src/main.ts"></script>
 		<!-- <script type="module" src="./dist/main.js"></script> -->
+	
+		<div style="position: absolute; top: 0; left: 0;" id="fpsText">
+			<p style="color: white;">Hello World</p>
+		</div>
 	</body>
 
 	<script>
